# Training

./: .gitignore  LICENSE  README.md
rust/all_in_one/: Cargo.toml
rust/all_in_one/src/: main.rs  services.rs
rust/all_in_one/src/files/: Employee.json
rust/all_in_one/src/files/map_files/: filter1_map.json  filter2_map.json  filter3_map.json  student_map.json
rust/all_in_one/src/files/table_files/: data.json  output_data.json
rust/all_in_one/src/services/: frequencies.rs  rest_api.rs  table_task.rs  task_assigner.rs
rust/all_in_one/src/services/common_st/: mod.rs
rust/all_in_one/src/services/employee/: mod.rs
rust/all_in_one/src/services/frequencies/: frequency.rs  string_cut.rs
rust/all_in_one/src/services/hashmap_task/: employee.rs  mod.rs  student.rs
rust/all_in_one/src/services/rest_api/: health_check.rs  routes.rs  server.rs
rust/all_in_one/src/services/student/: mod.rs
rust/all_in_one/src/services/table_task/: calculate.rs  make_table.rs
rust/all_in_one/src/services/task_assigner/: assigner.rs  bifurcator.rs  data_changer.rs  escalation_monitor.rs  request_generator.rs  (+1 more)
rust/all_in_one/src/utils/: db_config.rs
rust/grpc-task-server/: Cargo.toml  build.rs
rust/grpc-task-server/proto/: services.proto
rust/grpc-task-server/src/: data_loader.rs  main.rs
rust/grpc-task-server/src/customer/: service.rs
rust/grpc-task-server/src/employee/: model.rs  service.rs
rust/grpc-task-server/src/files/: StudentData.json
rust/grpc-task-server/src/student/: model.rs  service.rs
rust/grpc-task-server/src/utils/: db_config.rs  mod.rs
(+72 files in other folders)
