[package]
name = "all_in_one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde = {version = "1" , features = ["derive"]}
lazy_static = "1.4.0"
chrono = "0.4"
rand = "0.5"
axum = { version = "0.6.4", features = ["multipart"] }
tokio = {version = "1.36.0" , features = ["full"]}
uuid = {version = "1.7.0" , features = [
    "v4",
    "fast-rng",
    "macro-diagnostics"
]}
tower = { version = "0.4.13", features = ["full"]}
hyper = "0.14.28"
tower-http = { version = "0.3.0", features = ["cors", "trace"] } 
tikv-client = "0.3"