[package]
name = "grpc-task-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.36" , features = ["full"] }
tikv-client = "0.3.0"
serde = {version = "1.0.197" , features = ["derive"]}
serde_json = "1.0.114"

[build-dependencies]
tonic-build = "0.11"
